...
            "state": "translated",
            "value": "작업 진행 상황과 결과가 여기에 표시돼요."
          }
        }
      }
    },
    "Refresh": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Refresh"
          }
        },
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "刷新"
          }
        },
        "th": {
          "stringUnit": {
            "state": "translated",
            "value": "รีเฟรช"
...
